--- a/elavarasan_demo.html
+++ b/elavarasan_demo.html
@@ -192,7 +192,12 @@
                                        <i class="fab fa-facebook-f" aria-hidden="true"></i> 
 									   <span>facebook</span>
                                     </div>
-									 
+                                 </a>
+								 <a href="https://telegram.me/share/url?url=https%3A//wishmecards.com/elavarasan&text=HI" target="blank" class="social-margin">
+                                    <div class="social-icon call">
+                                       <i class="fab fa-telegram" aria-hidden="true"></i> 
+									   <span>telegram</span>
+                                    </div>
                                  </a>
                                  <!-- TwitterButton -->
                                  <a href="https://twitter.com/intent/tweet?text=https%3A//wishmecards.com/elavarasan" target="blank" class="social-margin">
