--- a/elavarasan_demo.html
+++ b/elavarasan_demo.html
@@ -193,7 +193,7 @@
 									   <span>facebook</span>
                                     </div>
                                  </a>
-								 <a href="https://telegram.me/share/url?url=https%3A//wishmecards.com/elavarasan&text=HI" target="blank" class="social-margin">
+								 <a href="https://telegram.me/share/url?url=https%3A//wishmecards.com/elavarasan" target="blank" class="social-margin">
                                     <div class="social-icon call">
                                        <i class="fab fa-telegram" aria-hidden="true"></i> 
 									   <span>telegram</span>
