--- a/elavarasan.html
+++ b/elavarasan.html
@@ -80,6 +80,13 @@
 									   <span>whatsapp</span>
                                     </div>
                                  </a>
+								 <a href="http://t.me/elavarasan_bot" target="blank" class="social-margin">
+                                    <div class="social-icon call">
+                                       <i class="fab fa-telegram" aria-hidden="true"></i> 
+									   <span>telegram</span>
+                                    </div>
+                                 </a>
+								 
 								  <!-- share save contact to address book card Button -->
                                  <!--<a href="assets/vcard/Elavarasan.vcf" class="social-margin" >
                                     <div class="social-icon contact">
@@ -192,7 +199,12 @@
                                        <i class="fab fa-facebook-f" aria-hidden="true"></i> 
 									   <span>facebook</span>
                                     </div>
-									 
+                                 </a>
+								 <a href="https://telegram.me/share/url?url=https%3A//wishmecards.com/elavarasan" target="blank" class="social-margin">
+                                    <div class="social-icon call">
+                                       <i class="fab fa-telegram" aria-hidden="true"></i> 
+									   <span>telegram</span>
+                                    </div>
                                  </a>
                                  <!-- TwitterButton -->
                                  <a href="https://twitter.com/intent/tweet?text=https%3A//wishmecards.com/elavarasan" target="blank" class="social-margin">
