--- a/elavarasan_demo.html
+++ b/elavarasan_demo.html
@@ -80,6 +80,13 @@
 									   <span>whatsapp</span>
                                     </div>
                                  </a>
+								 <a href="http://t.me/elavarasan_bot" target="blank" class="social-margin">
+                                    <div class="social-icon call">
+                                       <i class="fab fa-telegram" aria-hidden="true"></i> 
+									   <span>telegram</span>
+                                    </div>
+                                 </a>
+								 
 								  <!-- share save contact to address book card Button -->
                                  <!--<a href="assets/vcard/Elavarasan.vcf" class="social-margin" >
                                     <div class="social-icon contact">
