--- a/index.html
+++ b/index.html
@@ -754,8 +754,9 @@
                         </div>
                      </div>
                   </div>
-                  <!--<div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left" data-aos-delay="200">
-                     <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                  <div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left" data-aos-delay="200">
+                    <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form">-->
+					 <form name="contact" method="POST" class="php-email-form" data-netlify="true">
                         <div class="form-row">
                            <div class="col-md-6 form-group">
                               <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
@@ -781,7 +782,7 @@
                         </div>
                         <div class="text-center"><button type="submit">Send Message</button></div>
                      </form>
-                  </div>-->
+                  </div>
                </div>
             </div>
          </section>
