--- a/muthu_saradha_invitation.html
+++ b/muthu_saradha_invitation.html
@@ -17,23 +17,23 @@
   <!--countdown location calender whatsapp call message fb link for bride and groom-->
   <div style="padding-top: 580px;">
   <section>
-  <h1 style="color:gold; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:10px;" >Count Down</h1>
+  <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:10px;" >Count Down</h1>
   <p id="demo" style ="margin:0px; color:#ffeb3b; font-family: 'Metal Mania', cursive; font-size:38px;"></p>
   </section>
   <section>
-  <h1 style="color:gold; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:100px;" >Calendar</h1>
+  <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:100px;" >Calendar</h1>
   <div style="margin: 24px 0;">
-    <a  style="color:yellow;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z"><i  style="color:yellow;" class="fa fa-calendar"></i>&nbsp;&nbsp;Click to add to calendar</a>
+    <a  style="color:yellow;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z"><i  style="color:yellow;" class="fa fa-calendar"></i>&nbsp;&nbsp;Save the Date</a>
   </div>
   </section>
   <section>
-  <h1 style="color:gold; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:100px;" >Location</h1>
+  <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:100px;" >Location</h1>
    <div style="margin: 24px 0;">
     <a href="https://wa.link/wx3x1z" style="color:yellow;"><i  style="color:yellow;" class="fa fa-location-arrow"></i>&nbsp;&nbsp;Click for Directions</a>
   </div>
   </section>
    <section>
-  <h1 style="color:gold; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:30px;" >I am coming</h1>
+  <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:30px;" >I am coming</h1>
   <div style="margin: 24px 0;">
     <a  style="color:yellow;" href="https://wa.link/wx3x1z"><i  style="color:yellow;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to confirm</a>
   </div>
