--- a/muthu_saradha_invitation.html
+++ b/muthu_saradha_invitation.html
@@ -29,7 +29,7 @@
   <section>
   <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:100px;" >Location</h1>
    <div style="margin: 24px 0;">
-    <a href="https://wa.link/wx3x1z" style="color:yellow;"><i  style="color:yellow;" class="fa fa-location-arrow"></i>&nbsp;&nbsp;Click for Directions</a>
+    <a href="https://wa.link/3ldcu2" style="color:yellow;"><i  style="color:yellow;" class="fa fa-location-arrow"></i>&nbsp;&nbsp;Click for Directions</a>
   </div>
   </section>
    <section>
