--- a/muthu_saradha_invitation.html
+++ b/muthu_saradha_invitation.html
@@ -29,13 +29,13 @@
   <section>
   <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:100px;" >Location</h1>
    <div style="margin: 24px 0;">
-    <a href="https://wa.link/3ldcu2" style="color:yellow;"><i  style="color:yellow;" class="fa fa-location-arrow"></i>&nbsp;&nbsp;Click for Directions</a>
+    <a href="https://goo.gl/maps/vMFoGM6rhJkwSqnq6" style="color:yellow;"><i  style="color:yellow;" class="fa fa-location-arrow"></i>&nbsp;&nbsp;Click for Directions</a>
   </div>
   </section>
    <section>
   <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:30px;" >I am coming</h1>
   <div style="margin: 24px 0;">
-    <a  style="color:yellow;" href="https://wa.link/wx3x1z"><i  style="color:yellow;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to confirm</a>
+    <a  style="color:yellow;" href="https://wa.link/3ldcu2"><i  style="color:yellow;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to confirm</a>
   </div>
   </section>
   
