--- a/wedding_invitation_demo.html
+++ b/wedding_invitation_demo.html
@@ -5,6 +5,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href= 'https://fonts.googleapis.com/css?family=Sofia|Baloo|Roboto|Tangerine' rel='stylesheet' />
 <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Allura' rel='stylesheet'>
+<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Euphoria+Script&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
 <link href="/invitation/demo/assets/css/style.css" rel="stylesheet">
 <script src="/invitation/demo/assets/js/main.js"></script>
 </head>
@@ -15,15 +19,60 @@
   <!--<img src="/w3images/team2.jpg" alt="John" style="width:100%">-->
   <!--<img src="/assets/images/background.jpg" alt="" class="" style="width:100%">-->
   <!--countdown location calender whatsapp call message fb link for bride and groom-->
-  <section>
-  <video id ="vid" width="300" height="300" controls loop autoplay muted>
+ <!--  <section>
+ <video id ="vid" width="300" height="300" controls loop autoplay muted>
   <source src="/invitation/demo/assets/videos/invitation.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
-<!--<button onclick="playAudio()" type="button">Play Audio</button>-->
- </section>
-  <div style="padding-top: 280px;"> 
+ </section>-->
+  <div style="padding-top: 227px;">
+  <!--Bride and groom names -->
+   <section>
+  <h1 style="font-family: 'Allura';font-size: 25px; color: #f0dd76; margin:0px;"> Join Us for the </h1>
+  </section>
+   <section>
+  <h1 style="font-family: 'Allura';font-size: 50px; color: #f0dd76; margin:0px;"> Wedding </h1>
+  </section>
   <section>
+  <h1 style="font-family: 'Berkshire Swash', cursive;font-size: 35px; color: #f0dd76; margin:0px;"> Muthu ❤ Saradha</h1>
+  </section>
+<!-- wedding -->
+   <!-- Save the Wedding -->
+  <section>
+  <div style="margin: 0;margin-top:95px;">
+    <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z"><i  style=" color: #f0dd76;"class="fa fa-calendar"></i>&nbsp;&nbsp;Tuesday 26th Nov Mor</a>
+  </div>
+  </section>
+  <!-- Reception -->
+<section>
+  <div style="margin: 0;margin-top:128px;">
+    <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z"><i  style=" color: #f0dd76;"class="fa fa-calendar"></i>&nbsp;&nbsp;Tuesday 26th Nov Eve</a>
+  </div>
+  </section>
+  
+  <section>
+  <div style="margin: 0;margin-top:134px;">
+    <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://goo.gl/maps/vMFoGM6rhJkwSqnq6" ><i  style=" color: #f0dd76;"class="fa fa-location-arrow"></i>&nbsp;&nbsp;Sakthi Mahal,Ch-117.</a>
+  </div>
+  </section>
+
+    <!-- Count down -->
+<section>
+  <p id="countDown" style="font-family: 'Sriracha', cursive;font-size: 34px; color: #f0dd76; margin:0px; margin-top:130px;"></p>
+  </section>  
+  <section>
+  <div style="margin: 0;margin-top:128px;">
+    <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z"><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;8531990331</a><br>	
+	<a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z"><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;9361971993</a>
+  </div>
+  </section>
+  <!-- whatsapp to confirm -->
+   <section>
+  <div style="margin: 100px 0;">
+    <a  style="font-family: 'Sriracha', cursive;font-size: 30px; color: #f0dd76; margin:0px; margin-top:90px;" href="https://wa.link/3ldcu2"><i  style=" color: #f0dd76;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to confirm</a>
+  </div>
+  </section>
+  <!--<section>
   <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:10px;" >Count Down</h1>
   <p id="demo" style ="margin:0px; color:#ffeb3b; font-family: 'Metal Mania', cursive; font-size:38px;"></p>
   </section>
@@ -45,9 +94,9 @@
     <a  style="color:yellow;" href="https://wa.link/3ldcu2"><i  style="color:yellow;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to confirm</a>
   </div>
   </section>
-  <section>
-  <img src="/invitation/demo/assets/images/surya.jpg" alt="" class="" style="width:100%">
-  </section>
+  <section>-->
+  <!--<img src="/invitation/demo/assets/images/surya.jpg" alt="" class="" style="width:100%">
+  </section>-->
  <!-- <p class="title">CEO & Founder, Example</p>
   <p>Harvard University</p>
   <div style="margin: 24px 0;">
