--- a/wedding_invitation_demo.html
+++ b/wedding_invitation_demo.html
@@ -62,8 +62,8 @@
   </section>  
   <section>
   <div style="margin: 0;margin-top:128px;">
-    <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z"><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;8531990331</a><br>	
-	<a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z"><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;9361971993</a>
+    <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="tel:+918531990331" ><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;8531990331</a><br>	
+	<a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="tel:+919361971993" ><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;9361971993</a>
   </div>
   </section>
   <!-- whatsapp to confirm -->
