--- a/wedding_invitation_demo.html
+++ b/wedding_invitation_demo.html
@@ -13,18 +13,7 @@
 <script src="/invitation/demo/assets/js/main.js"></script>
 </head>
 <body>
-<!--https://www.w3schools.com/howto/howto_css_profile_card.asp-->
-
 <div class="card" >
-  <!--<img src="/w3images/team2.jpg" alt="John" style="width:100%">-->
-  <!--<img src="/assets/images/background.jpg" alt="" class="" style="width:100%">-->
-  <!--countdown location calender whatsapp call message fb link for bride and groom-->
- <!--  <section>
- <video id ="vid" width="300" height="300" controls loop autoplay muted>
-  <source src="/invitation/demo/assets/videos/invitation.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
- </section>-->
   <div style="padding-top: 207px;">
   <!--Bride and groom names -->
    <section>
@@ -37,84 +26,43 @@
   <h1 style="font-family: 'Berkshire Swash', cursive;font-size: 35px; color: #f0dd76; margin:0px;"> Muthu ❤ Saradha</h1>
   </section>
 <!-- wedding -->
-   <!-- Save the Wedding -->
   <section>
   <div style="margin: 0;margin-top:140px;">
-    <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z"><i  style=" color: #f0dd76;"class="fa fa-calendar"></i>&nbsp;&nbsp;Tuesday 26th Nov Mor</a>
+    <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z" target="blank" ><i  style=" color: #f0dd76;"class="fa fa-calendar"></i>&nbsp;&nbsp;Tuesday 26th Nov Mor</a>
   </div>
   </section>
   <!-- Reception -->
 <section>
   <div style="margin: 0;margin-top:128px;">
-    <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z"><i  style=" color: #f0dd76;"class="fa fa-calendar"></i>&nbsp;&nbsp;Tuesday 26th Nov Eve</a>
+    <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z" target="blank"><i  style=" color: #f0dd76;"class="fa fa-calendar"></i>&nbsp;&nbsp;Tuesday 26th Nov Eve</a>
   </div>
   </section>
-  
+   <!-- Venue or location -->
   <section>
   <div style="margin: 0;margin-top:134px;">
-    <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://goo.gl/maps/vMFoGM6rhJkwSqnq6" ><i  style=" color: #f0dd76;"class="fa fa-location-arrow"></i>&nbsp;&nbsp;Sakthi Mahal,Ch-117.</a>
+    <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://goo.gl/maps/vMFoGM6rhJkwSqnq6" target="blank" ><i  style=" color: #f0dd76;"class="fa fa-location-arrow"></i>&nbsp;&nbsp;Sakthi Mahal,Ch-117.</a>
   </div>
   </section>
-
     <!-- Count down -->
 <section>
   <p id="countDown" style="font-family: 'Sriracha', cursive;font-size: 34px; color: #f0dd76; margin:0px; margin-top:130px;"></p>
   </section>  
+  <!-- Contact us -->
   <section>
   <div style="margin: 0;margin-top:128px;">
-    <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="tel:+918531990331" ><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;8531990331</a><br>	
-	<a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="tel:+919361971993" ><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;9361971993</a>
+    <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="tel:+918531990331" target="blank"><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;8531990331</a><br>	
+	<a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="tel:+919361971993" target="blank"><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;9361971993</a>
   </div>
   </section>
   <!-- whatsapp to confirm -->
    <section>
   <div style="margin: 100px 0;">
-    <a  style="font-family: 'Sriracha', cursive;font-size: 30px; color: #f0dd76; margin:0px; margin-top:90px;" href="https://wa.link/3ldcu2"><i  style=" color: #f0dd76;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to confirm</a>
+    <a  style="font-family: 'Sriracha', cursive;font-size: 30px; color: #f0dd76; margin:0px; margin-top:90px;" href="https://wa.link/3ldcu2" target="blank"><i  style=" color: #f0dd76;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to confirm</a>
   </div>
   </section>
-  <!--<section>
-  <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:10px;" >Count Down</h1>
-  <p id="demo" style ="margin:0px; color:#ffeb3b; font-family: 'Metal Mania', cursive; font-size:38px;"></p>
-  </section>
-  <section>
-  <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:100px;" >Calendar</h1>
-  <div style="margin: 24px 0;">
-    <a  style="color:yellow;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z"><i  style="color:yellow;" class="fa fa-calendar"></i>&nbsp;&nbsp;Save the Date</a>
-  </div>
-  </section>
-  <section>
-  <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:100px;" >Location</h1>
-   <div style="margin: 24px 0;">
-    <a href="https://goo.gl/maps/vMFoGM6rhJkwSqnq6" style="color:yellow;"><i  style="color:yellow;" class="fa fa-location-arrow"></i>&nbsp;&nbsp;Click for Directions</a>
-  </div>
-  </section>
-   <section>
-  <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:30px;" >I am coming</h1>
-  <div style="margin: 24px 0;">
-    <a  style="color:yellow;" href="https://wa.link/3ldcu2"><i  style="color:yellow;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to confirm</a>
-  </div>
-  </section>
-  <section>-->
-  <!--<img src="/invitation/demo/assets/images/surya.jpg" alt="" class="" style="width:100%">
-  </section>-->
- <!-- <p class="title">CEO & Founder, Example</p>
-  <p>Harvard University</p>
-  <div style="margin: 24px 0;">
-    <a href="#"><i class="fa fa-dribbble"></i></a> 
-    <a href="#"><i class="fa fa-twitter"></i></a>  
-    <a href="#"><i class="fa fa-linkedin"></i></a>  
-    <a href="#"><i class="fa fa-facebook"></i></a> 
-  </div>
-  <p><button>Contact</button></p>-->
+  
   </div>
 </div>
 
-<script>
-var x = document.getElementById("vid"); 
-
-function playAudio() { 
-  x.play(); 
-} 
-</script>
 </body>
 </html>
