--- a/wedding_invitation_demo.html
+++ b/wedding_invitation_demo.html
@@ -56,8 +56,13 @@
             </section>
             <!-- whatsapp to confirm -->
             <section>
-               <div style="margin: 100px 0;">
+               <div style="margin: 0;margin-top: 100px;">
                   <a  style="font-family: 'Sriracha', cursive;font-size: 30px; color: #f0dd76; margin:0px; margin-top:90px;" href="https://wa.link/dmq4q0" target="blank"><i  style=" color: #f0dd76;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to confirm</a>
+               </div>
+            </section>
+			 <section>
+               <div style="margin: 0;margin-top: 100px;">
+                  <a  style="font-family: 'Sriracha', cursive;font-size: 30px; color: yellow; margin:0px; margin-top:90px;" href="https://wa.link/at1n7p" target="blank"><i  style=" color: yellow;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to Create your own invitation</a>
                </div>
             </section>
          </div>
