--- a/wedding_invitation_demo.html
+++ b/wedding_invitation_demo.html
@@ -9,12 +9,15 @@
       <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Euphoria+Script&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
+	  <link href="https://fonts.googleapis.com/css?family=Chivo:300,700|Playfair+Display:700i" rel="stylesheet">
+	  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+	  <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Lobster&display=swap" rel="stylesheet">
       <link href="/invitation/demo/assets/css/style.css" rel="stylesheet">
       <script src="/invitation/demo/assets/js/main.js"></script>
    </head>
    <body>
       <div class="card" >
-         <div style="padding-top: 207px;">
+         <div style="padding-top: 75%;">
             <!--Bride and groom names -->
             <section>
                <h1 style="font-family: 'Allura';font-size: 25px; color: #f0dd76; margin:0px;"> Join Us for the </h1>
@@ -23,46 +26,55 @@
                <h1 style="font-family: 'Allura';font-size: 30px; color: #f0dd76; margin:0px;"> Wedding </h1>
             </section>
             <section>
-               <h1 style="font-family: 'Berkshire Swash', cursive;font-size: 35px; color: #f0dd76; margin:0px;"> Muthu ❤ Saradha</h1>
+               <h1 style="font-family: 'Berkshire Swash', cursive;font-size: 85px; color: #f0dd76; margin:0px;"> Muthu </h1>
+			   <h1 style="font-family: 'Berkshire Swash', cursive;font-size: 85px; color: red; margin:0px;">  ❤ </h1>
+			   <h1 style="font-family: 'Berkshire Swash', cursive;font-size: 85px; color: #f0dd76; margin:0px;">Saradha</h1>
             </section>
             <!-- wedding -->
-            <section>
-               <div style="margin: 0;margin-top:140px;">
+            <section class ="sec_top">
+			 <h1 style="font-family: 'Courgette', cursive;font-size: 50px; color: #f0dd76; margin:0px;"> Wedding </h1>
+               <div style="margin: 0;">
                   <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z" target="blank" ><i  style=" color: #f0dd76;"class="fa fa-calendar"></i>&nbsp;&nbsp;Tuesday 26th Nov Mor</a>
                </div>
             </section>
             <!-- Reception -->
-            <section>
-               <div style="margin: 0;margin-top:128px;">
+             <section class ="sec_top">
+			 <h1 style="font-family: 'Courgette', cursive;font-size: 50px; color: #f0dd76; margin:0px;"> Reception </h1>
+               <div style="margin: 0;">
                   <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z" target="blank"><i  style=" color: #f0dd76;"class="fa fa-calendar"></i>&nbsp;&nbsp;Tuesday 26th Nov Eve</a>
                </div>
             </section>
             <!-- Venue or location -->
-            <section>
-               <div style="margin: 0;margin-top:134px;">
+             <section class ="sec_top">
+			 <h1 style="font-family: 'Courgette', cursive;font-size: 50px; color: #f0dd76; margin:0px;"> Venue </h1>
+               <div style="margin: 0;">
                   <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://goo.gl/maps/vMFoGM6rhJkwSqnq6" target="blank" ><i  style=" color: #f0dd76;"class="fa fa-location-arrow"></i>&nbsp;&nbsp;Sakthi Mahal,Ch-117.</a>
                </div>
             </section>
             <!-- Count down -->
-            <section>
-               <p id="countDown" style="font-family: 'Sriracha', cursive;font-size: 34px; color: #f0dd76; margin:0px; margin-top:130px;"></p>
+            <section class ="sec_top">
+			 <h1 style="font-family: 'Courgette', cursive;font-size: 50px; color: #f0dd76; margin:0px;"> CountDown </h1>
+               <div style="margin: 0;">
+               <p id="countDown" style="font-family: 'Sriracha', cursive;font-size: 34px; color: #f0dd76; margin:0px;"></p>
             </section>
             <!-- Contact us -->
-            <section>
-               <div style="margin: 0;margin-top:128px;">
+            <section class ="sec_top">
+			 <h1 style="font-family: 'Courgette', cursive;font-size: 50px; color: #f0dd76; margin:0px;"> Contact Us </h1>
+               <div style="margin: 0;">
                   <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="tel:+918531990331" target="blank"><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;8531990331</a><br>	
                   <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="tel:+919361971993" target="blank"><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;9361971993</a>
                </div>
             </section>
             <!-- whatsapp to confirm -->
-            <section>
-               <div style="margin: 0;margin-top: 100px;">
+            <section class ="sec_top">
+			 <h1 style="font-family: 'Courgette', cursive;font-size: 50px; color: #f0dd76; margin:0px;"> I'm Coming </h1>
+               <div style="margin: 0;">
                   <a  style="font-family: 'Sriracha', cursive;font-size: 30px; color: #f0dd76; margin:0px; margin-top:90px;" href="https://wa.link/dmq4q0" target="blank"><i  style=" color: #f0dd76;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to confirm</a>
                </div>
             </section>
 			 <section>
-               <div style="margin: 0;margin-top: 11px;">
-                  <a  style="font-family: 'Sriracha', cursive;font-size: 30px; color: yellow; margin:0px; margin-top:90px;" href="https://wa.link/at1n7p" target="blank"><i  style=" color: yellow;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to Create &nbsp;&nbsp;&nbsp;&nbsp;your own invitation</a>
+               <div style="margin: 0;margin-top: 90px;">
+                  <a  style="font-family: 'Sriracha', cursive;font-size: 30px; color: yellow; margin:0px; margin-top:90px;  overflow-wrap: break-word;" href="https://wa.link/at1n7p" target="blank"><i  style=" color: yellow;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to Create your own invitation</a>
                </div>
             </section>
          </div>
