--- a/wedding_invitation_demo.html
+++ b/wedding_invitation_demo.html
@@ -32,42 +32,42 @@
             </section>
             <!-- wedding -->
             <section class ="sec_top">
-			 <h1 style="font-family: 'Courgette', cursive;font-size: 50px; color: #f0dd76; margin:0px;"> Wedding </h1>
+			 <h1 class ="sec_heading"> Wedding </h1>
                <div style="margin: 0;">
-                  <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z" target="blank" ><i  style=" color: #f0dd76;"class="fa fa-calendar"></i>&nbsp;&nbsp;Tuesday 26th Nov Mor</a>
+                  <a   class ="sec_content" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z" target="blank" ><i  style=" color: #f0dd76;"class="fa fa-calendar"></i>&nbsp;&nbsp;Tuesday 26th Nov Mor</a>
                </div>
             </section>
             <!-- Reception -->
              <section class ="sec_top">
-			 <h1 style="font-family: 'Courgette', cursive;font-size: 50px; color: #f0dd76; margin:0px;"> Reception </h1>
+			 <h1 class ="sec_heading"> Reception </h1>
                <div style="margin: 0;">
-                  <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z" target="blank"><i  style=" color: #f0dd76;"class="fa fa-calendar"></i>&nbsp;&nbsp;Tuesday 26th Nov Eve</a>
+                  <a   class ="sec_content" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Muthu+Saradha+Wedding&details=We+welcome+you+for+our+wedding&location=Lakshmi+Mahal%2CAbhinandhan+Nagar%2CNanmangalam%2CNear+Sai+Baba+temple%2C+Chennai-600117&dates=20200701T130000Z%2F20200702T052000Z" target="blank"><i  style=" color: #f0dd76;"class="fa fa-calendar"></i>&nbsp;&nbsp;Tuesday 26th Nov Eve</a>
                </div>
             </section>
             <!-- Venue or location -->
              <section class ="sec_top">
-			 <h1 style="font-family: 'Courgette', cursive;font-size: 50px; color: #f0dd76; margin:0px;"> Venue </h1>
+			 <h1 class ="sec_heading"> Venue </h1>
                <div style="margin: 0;">
-                  <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="https://goo.gl/maps/vMFoGM6rhJkwSqnq6" target="blank" ><i  style=" color: #f0dd76;"class="fa fa-location-arrow"></i>&nbsp;&nbsp;Sakthi Mahal,Ch-117.</a>
+                  <a   class ="sec_content" href="https://goo.gl/maps/vMFoGM6rhJkwSqnq6" target="blank" ><i  style=" color: #f0dd76;"class="fa fa-location-arrow"></i>&nbsp;&nbsp;Sakthi Mahal,Ch-117.</a>
                </div>
             </section>
             <!-- Count down -->
             <section class ="sec_top">
-			 <h1 style="font-family: 'Courgette', cursive;font-size: 50px; color: #f0dd76; margin:0px;"> CountDown </h1>
+			 <h1 class ="sec_heading"> CountDown </h1>
                <div style="margin: 0;">
                <p id="countDown" style="font-family: 'Sriracha', cursive;font-size: 34px; color: #f0dd76; margin:0px;"></p>
             </section>
             <!-- Contact us -->
             <section class ="sec_top">
-			 <h1 style="font-family: 'Courgette', cursive;font-size: 50px; color: #f0dd76; margin:0px;"> Contact Us </h1>
+			 <h1 class ="sec_heading"> Contact Us </h1>
                <div style="margin: 0;">
-                  <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="tel:+918531990331" target="blank"><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;8531990331</a><br>	
-                  <a   style="font-family: 'Sriracha', cursive;font-size: 22px; color: #f0dd76; margin:0px; margin-top:90px; font-weight: 900;" href="tel:+919361971993" target="blank"><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;9361971993</a>
+                  <a   class ="sec_content" href="tel:+918531990331" target="blank"><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;8531990331</a><br>	
+                  <a   class ="sec_content" href="tel:+919361971993" target="blank"><i  style=" color: #f0dd76;"class="fa fa-phone"></i>&nbsp;&nbsp;9361971993</a>
                </div>
             </section>
             <!-- whatsapp to confirm -->
             <section class ="sec_top">
-			 <h1 style="font-family: 'Courgette', cursive;font-size: 50px; color: #f0dd76; margin:0px;"> I'm Coming </h1>
+			 <h1 class ="sec_heading"> I'm Coming </h1>
                <div style="margin: 0;">
                   <a  style="font-family: 'Sriracha', cursive;font-size: 30px; color: #f0dd76; margin:0px; margin-top:90px;" href="https://wa.link/dmq4q0" target="blank"><i  style=" color: #f0dd76;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to confirm</a>
                </div>
