--- a/wedding_invitation_demo.html
+++ b/wedding_invitation_demo.html
@@ -73,8 +73,8 @@
                </div>
             </section>
 			 <section>
-               <div style="margin: 0;margin-top: 90px;">
-                  <a  style="font-family: 'Sriracha', cursive;font-size: 30px; color: yellow; margin:0px; margin-top:90px;  overflow-wrap: break-word;" href="https://wa.link/at1n7p" target="blank">Click here to <br>Create your<br> own invitation</a>
+               <div style="margin: 0;margin-top: 90px; padding-bottom: 95px;">
+                  <a  style="font-family: 'Sriracha', cursive;font-size: 30px; color: yellow; margin:0px; margin-top:90px; " href="https://wa.link/at1n7p" target="blank">Click here to <br>Create your<br> own invitation</a>
                </div>
             </section>
          </div>
