shyam utkarsha finance

--- a/wedding_invitation_demo.html
+++ b/wedding_invitation_demo.html
@@ -72,6 +72,16 @@
                   <a  style="font-family: 'Sriracha', cursive;font-size: 30px; color: #f0dd76; margin:0px; margin-top:90px;" href="https://wa.link/dmq4q0" target="blank"><i  style=" color: #f0dd76;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to confirm</a>
                </div>
             </section>
+			 <!-- Share to whatsapp -->
+            <section class ="sec_top">
+			 <h1 class ="sec_heading"> Share </h1>
+               <div style="margin: 0;">
+                  <a  style="font-family: 'Sriracha', cursive;font-size: 30px; color: #f0dd76; margin:0px; margin-top:90px;" href="https://api.whatsapp.com/send?phone=&text=Click%20the%20below%20link%20to%20get%20see%20my%20invitation%20card%20https%3A%2F%2Fwishmecards.com%2Fwedding_invitation_demo" target="blank"><i  style=" color: #f0dd76;" class="fa fa-share-alt"></i>&nbsp;&nbsp;Click to Share</a>
+               </div>
+            </section>
+			<!-- to create whatsapp me-->
+			<a href="whatsapp://send?text=<URL>" data-action="share/whatsapp/share" onClick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" title="Share on whatsapp"></a>
+
 			 <section>
                <div style="margin: 0;margin-top: 90px; padding-bottom: 95px;">
                   <a  style="font-family: 'Sriracha', cursive;font-size: 30px; color: yellow; margin:0px; margin-top:90px; " href="https://wa.link/at1n7p" target="blank">Click here to <br>Create your<br> own invitation</a>
