--- a/shyam_utkarsha.html
+++ b/shyam_utkarsha.html
@@ -13,17 +13,18 @@
 <!-- partial:index.partial.html -->
 <div class="wrapper">
   <div class="profile-card js-profile-card">
-  <div class ="row" style="padding:20px;padding-top:5px; padding-bottom:50px; background:black; border-bottom-right-radius:8%;border-bottom-left-radius:8%;">
+  <div class ="row" style="padding:20px;padding-top:25px; padding-bottom:40px; background:#fff; border-bottom-right-radius:8%;border-bottom-left-radius:8%;">
 	<div class="profile-card__img" style="margin-left:auto; width:150px; transform: none;">
       <img src="assets/customer/images/shyam_logo.jpg" alt="profile card">
     </div>
+	  <div class="profile-card__txt" style="margin-bottom:0px; font-size: 10px;font-weight: 900; text-align:center;">UTKARSHA FINANCIAL & INVESTMENT ADVISORY SERVICES</div>
 	</div>
 	<div class ="row">
     <div class="profile-card__img"  style="margin-left:20px;  transform: translateY(-30%); width:90px; height:90px;" >
       <img src="assets/customer/images/shyam_profile.jpeg" alt="profile card">
     </div>
 </div>
- <div class="profile-card__cnt js-profile-cnt" style="margin-top: -79px; margin-left:45px; padding-bottom:0px;">
+ <div class="profile-card__cnt js-profile-cnt" style="margin-top: -90px; margin-left:30px; padding-bottom:0px;">
       <div class="profile-card__name" style="margin-bottom:5px; color:black;" >Shyam Kishor</div>
       <div class="profile-card__txt" style="margin-bottom:0px;">Financial Planner</div>
     
@@ -51,24 +52,24 @@
 									    <span style="color:white;">About</span>
                                     </div>
                                  </a>
-								 <a href="https://www.facebook.com/shyam.kishor3" class="social-margin" target="blank">
+								 <a href="https://www.facebook.com/Utkarshafinance/?modal=admin_todo_tour" class="social-margin" target="blank">
                                     <div class="social-icon payment">
                                        <i class="fa fa-globe" aria-hidden="true"></i>
 									    <span style="color:white;">Website</span>
                                     </div>
                                  </a>
-								 <!--<a href="https://pages.razorpay.com/pl_ElRHr5q55UvKL0/view" class="social-margin" target="blank">
+								 <a href="shyam_utkarsha_about_us.html#products" class="social-margin" target="blank">
                                     <div class="social-icon payment">
                                        <i class="fas fa-database"></i>
 									    <span style="color:white;">Products</span>
                                     </div>
                                  </a>
-								 <a href="https://pages.razorpay.com/pl_ElRHr5q55UvKL0/view" class="social-margin" target="blank">
+								 <a href="shyam_utkarsha_about_us.html#services" class="social-margin" target="blank">
                                     <div class="social-icon payment">
                                       <i class="fas fa-chart-pie"></i>
 									    <span style="color:white;">Services</span>
                                     </div>
-                                 </a>-->
+                                 </a>
 								 <a href="http://p.njw.bz/91429" class="social-margin" target="blank">
                                     <div class="social-icon payment">
                                        <i class="fas fa-address-book"></i>
