--- a/shyam_utkarsha_about_us.html
+++ b/shyam_utkarsha_about_us.html
@@ -19,10 +19,41 @@
 
 <div class="jumbotron text-center">
   <h1>About Us</h1> 
-  <p>Our comprehensive financial planning services are perfect for those looking for clarity, organization and education in their financial life. Your plan will help you identify your values, get clear on your goals, identify gaps, build a framework for success, and ensure that you have an accountability partner to keep you on track to a meaningful financial future.
+  <p style="padding:20px; text-align:left;" >Our comprehensive financial planning services are perfect for those looking for clarity, organization and education in their financial life. Your plan will help you identify your values, get clear on your goals, identify gaps, build a framework for success, and ensure that you have an accountability partner to keep you on track to a meaningful financial future.
 Whether it’s saving for retirement, managing your investments, planning for your career, stashing away for your kid’s education, or having a clearer picture of how to integrate your business and personal finances to make your life work, we’ve got you covered.
 </p> 
 </div>
-
+<div id="products" class="jumbotron text-center">
+<h1>Products</h1>
+<ol style="text-align:left; font-size: 21px; font-weight: 200; margin-left:10px;">
+<li>Mutual Fund               </li>
+<li>Equity Trading Account    </li>
+<li>Future & Options Account  </li>
+<li>National Pension Scheme   </li>
+<li>Life Insurance            </li>
+<li>Health Insurance          </li>
+<li>Motor Insurance           </li>
+<li>Home Insurance            </li>
+<li>Group Mediclaim Insurance </li>
+<li>Marine Insurance          </li>
+<li>Home Loan                 </li>
+<li>Business Loan             </li>
+<li>Loan against Property     </li>
+</ol> 
+</div>
+<div id="services" class="jumbotron text-center">
+<h1>Services</h1>
+<ol style="text-align:left; font-size: 21px; font-weight: 200; margin-left:10px">
+<li>Financial Planning                                      </li>
+<li>Tax Planning & Filing                                   </li>
+<li>Investment Planning                                     </li>
+<li>Future Corpus Planning                                  </li>
+<li>Insurance Planning                                      </li>
+<li>Retirement Planning                                     </li>
+<li>Wealth Creation                                         </li>
+<li>Investment Management Services                          </li>
+<li>Loan (Home Loan / LAP / Personal Loan / Business Loan)  </li>
+</ol> 
+</div>
 </body>
 </html>
