--- a/shyam_utkarsha_about_us.html
+++ b/shyam_utkarsha_about_us.html
@@ -20,40 +20,54 @@
 <div class="jumbotron text-center">
   <h1>About Us</h1> 
   <p style="padding:20px; text-align:left;" >Our comprehensive financial planning services are perfect for those looking for clarity, organization and education in their financial life. Your plan will help you identify your values, get clear on your goals, identify gaps, build a framework for success, and ensure that you have an accountability partner to keep you on track to a meaningful financial future.
+  <br>
 Whether it’s saving for retirement, managing your investments, planning for your career, stashing away for your kid’s education, or having a clearer picture of how to integrate your business and personal finances to make your life work, we’ve got you covered.
 </p> 
 </div>
-<div id="products" class="jumbotron text-center">
-<h1>Products</h1>
-<ol style="text-align:left; font-size: 21px; font-weight: 200; margin-left:10px;">
-<li>Mutual Fund               </li>
-<li>Equity Trading Account    </li>
-<li>Future & Options Account  </li>
-<li>National Pension Scheme   </li>
-<li>Life Insurance            </li>
-<li>Health Insurance          </li>
-<li>Motor Insurance           </li>
-<li>Home Insurance            </li>
-<li>Group Mediclaim Insurance </li>
-<li>Marine Insurance          </li>
-<li>Home Loan                 </li>
-<li>Business Loan             </li>
-<li>Loan against Property     </li>
-</ol> 
+<div id="products" class="jumbotron text-left" >
+<h1 style ="padding-left:20px;">Why Should you choose us?</h1>
+<ul style="text-align:left; font-size: 21px; font-weight: 200; margin-left:10px;">
+<li>To do your financial health check up to assess your current state and find solutions to fix your financial problems            </li>
+<li>To suggest an unbiased and customized advice across all aspects of personal finance in one place                               </li>
+<li>To get an affordable access to scientific high-quality goal-based advice                                                       </li>
+<li>To get a single platform to getting advice, implementing it and tracking and reviewing the financial health on regular interval</li>
+<li>To get an access to curated and specialized products and services                                                              </li>
+<li>To have a single place for all financial products information                                                                  </li>
+<li>To do continuous improvement in your financial health through regular reviews and rebalancing in your overall portfolio        </li>
+</ul> 
 </div>
-<div id="services" class="jumbotron text-center">
-<h1>Services</h1>
-<ol style="text-align:left; font-size: 21px; font-weight: 200; margin-left:10px">
-<li>Financial Planning                                      </li>
-<li>Tax Planning & Filing                                   </li>
-<li>Investment Planning                                     </li>
-<li>Future Corpus Planning                                  </li>
-<li>Insurance Planning                                      </li>
-<li>Retirement Planning                                     </li>
-<li>Wealth Creation                                         </li>
-<li>Investment Management Services                          </li>
-<li>Loan (Home Loan / LAP / Personal Loan / Business Loan)  </li>
-</ol> 
+<div id="services" class="jumbotron text-left" >
+<h1 style ="padding-left:20px;">What to expect from us?</h1>
+<ul style="text-align:left; font-size: 21px; font-weight: 200; margin-left:10px">
+<li><strong>Onboarding Meeting:</strong> A 60-minute meeting where we get clear on your financial goals and values, what your current financial picture looks like, and what current limitations or hurdles you are facing.                                                                  </li>
+<li><strong>Plan Delivery Meeting:</strong> A 90-Minute meeting to deliver your financial planning recommendations, actions items, and prioritized “to-do” list. You’ll receive a copy of your financial plan a few days before this meeting for review.                                     </li>
+<li><strong>30 Day Check-In:</strong> A 60-Minute call within one month of recommendation delivery to review progress.                                                                                                                                                                       </li>
+<li><strong>6 Month Reviews:</strong> A 60-Minute review meeting every 6 months to measure progress, make adjustments, identify new action steps and address life changes.                                                                                                                   </li>
+<li><strong>Ongoing Access:</strong> E-mails and calls for accountability and to address changes along the way.                                                                                                                                                                              </li>
+<li><strong>Partnered with a Financial Planner:</strong> Professional, friendly and encouraging advice from a Financial planner, who will always act in your best interest.                                                                                                                  </li>
+<li><strong>Comprehensive Financial Plan:</strong> 10-15-page financial plan complete with an itemized action checklist, an overview of your most important goals, a net worth statement, a cash flow projection, retirement projections, and recommendations in the below areas that apply. </li>
+<li><strong>Investment Advice:</strong> Before we invest funds on your behalf, we will review your goals, risk tolerance, time horizon, tax considerations, income needs, and any unique needs that you might have.                                                                          </li>
+</ul> 
+</div>
+<div id="services" class="jumbotron text-left" >
+<h1 style ="padding-left:20px;">What We'll Talk About?</h1>
+<ul style="text-align:left; font-size: 21px; font-weight: 200; margin-left:10px">
+<li>Retirement Savings and Strategies (the best account(s) for your situation and amounts to contribute)                </li>
+<li>Investment allocation and your risk tolerance                                                                       </li>
+<li>Life Stages: Retirement, starting a business, growing your family, buying a home                                    </li>
+<li>Income Tax planning                                                                                                 </li>
+<li>Child Higher Education Planning                                                                                     </li>
+<li>Daughter Marriage Planning                                                                                          </li>
+<li>Goal Prioritization and Funding                                                                                     </li>
+<li>Cash Flow and Spending Management                                                                                   </li>
+<li>Debt Repayment (Credit Cards, Personal loan, etc.)                                                                  </li>
+<li>Company Benefits Maximization                                                                                       </li>
+<li>Stock Options, Employee Stock Purchase Plans                                                                        </li>
+<li>Estate planning & Insurance needs                                                                                   </li>
+<li>Rental Property Analysis                                                                                            </li>
+<li>Entrepreneur / Small Business planning: Retirement planning, business structure, tax planning, cash flow management </li>
+
+</ul> 
 </div>
 </body>
 </html>
