--- a/shyam_utkarsha.html
+++ b/shyam_utkarsha.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Profile Card</title>
+  <title>UTKARSHA FINANCIAL & INVESTMENT ADVISORY SERVICES</title>
   <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	  <link href="assets/css/profile_style.css" rel="stylesheet">
@@ -58,13 +58,13 @@
 									    <span style="color:white;">Website</span>
                                     </div>
                                  </a>
-								 <a href="shyam_utkarsha_about_us.html#products" class="social-margin" target="blank">
+								 <a href="shyam_utkarsha_product_services.html#products" class="social-margin" target="blank">
                                     <div class="social-icon payment">
                                        <i class="fas fa-database"></i>
 									    <span style="color:white;">Products</span>
                                     </div>
                                  </a>
-								 <a href="shyam_utkarsha_about_us.html#services" class="social-margin" target="blank">
+								 <a href="shyam_utkarsha_product_services.html#services" class="social-margin" target="blank">
                                     <div class="social-icon payment">
                                       <i class="fas fa-chart-pie"></i>
 									    <span style="color:white;">Services</span>
