--- a/shyam_utkarsha_product_services.html
+++ b/shyam_utkarsha_product_services.html
@@ -18,34 +18,32 @@
 <body>
 <div id="products" class="jumbotron text-center">
 <h1>Products</h1>
-<ol style="text-align:left; font-size: 21px; font-weight: 200; margin-left:10px;">
-<li>Mutual Fund               </li>
-<li>Equity Trading Account    </li>
-<li>Future & Options Account  </li>
-<li>National Pension Scheme   </li>
-<li>Life Insurance            </li>
-<li>Health Insurance          </li>
-<li>Motor Insurance           </li>
-<li>Home Insurance            </li>
-<li>Group Mediclaim Insurance </li>
-<li>Marine Insurance          </li>
-<li>Home Loan                 </li>
-<li>Business Loan             </li>
-<li>Loan against Property     </li>
-</ol> 
+<ul style="text-align:left; font-size: 21px; font-weight: 200; margin-left:10px;">
+<li>Mutual Fund (Debt / Equity / ELSS)                 </li>
+<li>Equity Trading Account                             </li>
+<li>Future & Options Account                           </li>
+<li>National Pension Scheme                            </li>
+<li>Insurance (Life / Health / General / Home / Marine)</li>
+<li>Group Mediclaim Insurance                          </li>
+<li>Fixed Deposit (Company Fixed Deposit / Bank / NBFC)</li>
+<li>Bonds (Tax Savings Fund)                           </li>
+<li>Home Loan (Fresh / Balance Transfer)               </li>
+<li>Business Loan                                      </li>
+<li>Loan against Property / Mutual Fund Portfolio      </li>
+</ul> 
 </div>
 <div id="services" class="jumbotron text-center">
 <h1>Services</h1>
 <ol style="text-align:left; font-size: 21px; font-weight: 200; margin-left:10px">
-<li>Financial Planning                                      </li>
-<li>Tax Planning & Filing                                   </li>
-<li>Investment Planning                                     </li>
-<li>Future Corpus Planning                                  </li>
-<li>Insurance Planning                                      </li>
-<li>Retirement Planning                                     </li>
-<li>Wealth Creation                                         </li>
-<li>Investment Management Services                          </li>
-<li>Loan (Home Loan / LAP / Personal Loan / Business Loan)  </li>
+<li>Financial Planning                 </li>
+<li>Retirement Planning                </li>
+<li>Child’s Education Planning         </li>
+<li>Tax Planning & Filing              </li>
+<li>Investment Planning                </li>
+<li>Future Corpus Planning             </li>
+<li>Insurance Planning                 </li>
+<li>Portfolio Management Services      </li>
+<li>NRI Investments                    </li>
 </ol> 
 </div>
 </body>
