--- a/shyam_utkarsha.html
+++ b/shyam_utkarsha.html
@@ -82,7 +82,7 @@
 									    <span style="color:white;">Location</span>
                                     </div>
                                  </a>-->
-								 <a href="whatsapp://send?text=https%3A//wishmecards.com/shyamm_utkarsha" class="social-margin" target="blank">
+								 <a href="whatsapp://send?text=https%3A//wishmecards.com/shyam_utkarsha" class="social-margin" target="blank">
                                     <div class="social-icon payment">
                                        <i class="fas fa-share-alt"></i>
 									    <span style="color:white;">Share</span>
