--- a/jashwanth_invitation.html
+++ b/jashwanth_invitation.html
@@ -21,7 +21,7 @@
   <section>
   <h1 style="color:#72c1ff;font-family: 'Tangerine', serif;font-size: 48px;margin-bottom:10px;margin-top: 10px;">Calendar</h1>
   <div style="margin: 24px 0;">
-    <a style="color:yellow;" href="https://www.google.com/calendar/render?action=TEMPLATE&amp;text=Jashwanth%27s+Birthday&amp;details=Welcome+to+our+prince%27s+birthday+party&amp;location=Aishwarya+Party+Hall+%26+Catering+for+all+occasions&amp;dates=20200813T123000Z%2F20200813T163000Z"><i style="color:yellow;" class="fa fa-calendar"></i>&nbsp;&nbsp;Save the Date</a>
+    <a style="color:yellow;" href="http://www.google.com/calendar/event?action=TEMPLATE&dates=20200813T170000Z%2F20200813T210000Z&text=Jashwanth's%20Birthday&location=Aishwarya%20Party%20Hall%20%26%20Catering%20for%20all%20occasions%2C%2024%2F172%201st%20floor%2C%20Gollavar%20Agraharam%20Rd%2C%20Kanniyappan%20Colony%2C%20Sanjeevarayanpet%2C%20Washermanpet%2C%20Chennai%2C%20Tamil%20Nadu%20600021%2C%20India&details=Welcome%20to%20our%20prince's%20birthday%20party"><i style="color:yellow;" class="fa fa-calendar"></i>&nbsp;&nbsp;Save the Date</a>
   </div>
   </section>
   <section>
